@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.1 1999-10-12 12:23:16 maire Exp $
+# $Id: GNUmakefile,v 1.2 2000-01-20 15:34:37 maire Exp $
 # --------------------------------------------------------------
 # GNUmakefile for examples module.  Gabriele Cosmo, 06/04/98.
 # --------------------------------------------------------------
@@ -16,7 +16,11 @@ all: lib bin
 
 include $(G4INSTALL)/config/architecture.gmk
 
-LDFLAGS  += -L/cern/pro/lib
-LOADLIBS += -lpacklib $(FCLIBS)
+ifdef G4NOHIST
+  CPPFLAGS += -DG4NOHIST
+else
+  LDFLAGS  += -L/cern/pro/lib
+  LOADLIBS += -lpacklib $(FCLIBS)
+endif
 
 include $(G4INSTALL)/config/binmake.gmk
