@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em5RunAction.cc,v 1.3 1999-12-15 14:49:10 gunter Exp $
+// $Id: Em5RunAction.cc,v 1.4 2000-01-20 15:34:40 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -23,19 +23,25 @@
 #include "g4std/iomanip"
 
 #include "Randomize.hh"
+
+#ifndef G4NOHIST
 #include "CLHEP/Hist/HBookFile.h"
 #include <assert.h>
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 Em5RunAction::Em5RunAction()
-  :histName("histfile"),nbinStep(0.),nbinEn(0.),nbinTt(0.),nbinTb(0.),
-   nbinTsec(0.),nbinTh(0.),nbinThback(0.),nbinR(0.),nbinGamma(0.),
-   nbinvertexz(0.),histo1(0),histo2(0),histo3(0),histo4(0),histo5(0),
-   histo6(0),histo7(0),histo8(0),histo9(0),histo10(0)
+  :histName("histfile"),nbinStep(0),nbinEn(0),nbinTt(0),nbinTb(0),
+   nbinTsec(0),nbinTh(0),nbinThback(0),nbinR(0),nbinGamma(0),nbinvertexz(0)
 {
   runMessenger = new Em5RunMessenger(this);
-  saveRndm = 1;  
+  saveRndm = 1;
+  
+#ifndef G4NOHIST
+  histo1=0; histo2=0; histo3=0; histo4=0; histo5=0; histo6=0; histo7=0;
+  histo8=0; histo9=0; histo10=0;hi2bis=0;
+#endif      
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -43,24 +49,26 @@ Em5RunAction::Em5RunAction()
 Em5RunAction::~Em5RunAction()
 {
   delete runMessenger;
-  if(histo1) delete histo1 ;
-  if(histo2) delete histo2 ;
-  if(histo3) delete histo3 ;
-  if(histo4) delete histo4 ;
-  if(histo5) delete histo5 ;
-  if(histo6) delete histo6 ;
-  if(histo7) delete histo7 ;
-  if(histo8) delete histo8 ;
-  if(histo9) delete histo9 ;
-  if(histo10) delete histo10 ;
+#ifndef G4NOHIST  
+  if(histo1)  delete histo1 ;
+  if(histo2) {delete histo2 ; delete hi2bis;}
+  if(histo3)  delete histo3 ;
+  if(histo4)  delete histo4 ;
+  if(histo5)  delete histo5 ;
+  if(histo6)  delete histo6 ;
+  if(histo7)  delete histo7 ;
+  if(histo8)  delete histo8 ;
+  if(histo9)  delete histo9 ;
+  if(histo10) delete histo10;
   delete hbookManager;
-
+#endif  
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 void Em5RunAction::bookHisto()
 {
+#ifndef G4NOHIST
   // init hbook
   hbookManager = new HBookFile(histName, 68);
   assert (hbookManager != 0);
@@ -77,6 +85,10 @@ void Em5RunAction::bookHisto()
     histo2 = hbookManager->histogram("energy deposit in absorber(in MeV)"
                                      ,nbinEn,Enlow,Enhigh) ;
     assert (histo2 != 0);
+    				     
+    hi2bis = hbookManager->histogram("energy deposit: normalized distribution"
+                                     ,nbinEn,Enlow,Enhigh) ;				     
+    assert (hi2bis != 0);
   }
   if(nbinTh>0)
   {
@@ -127,6 +139,7 @@ void Em5RunAction::bookHisto()
                                 ,nbinGamma,log10(ElowGamma),log10(EhighGamma))  ;
     assert (histo10 != 0);
   }
+#endif  
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -410,6 +423,7 @@ void Em5RunAction::EndOfRunAction(const G4Run* aRun)
    G4cout << " energy deposit distribution " << G4endl ;
    G4cout << "#entries=" << entryEn << "    #underflows=" << underEn <<
              "    #overflows=" << overEn << G4endl ;
+	     
    if( entryEn>0.)
    {
      E = Enlow - dEn ;
@@ -419,6 +433,9 @@ void Em5RunAction::EndOfRunAction(const G4Run* aRun)
      for(G4int ien=0; ien<nbinEn; ien++)
      {
       E += dEn ;
+#ifndef G4NOHIST      
+      hi2bis->accumulate(E+0.5*dEn,distEn[ien]/TotNbofEvents);
+#endif      
       if(distEn[ien]>fmax)
       {
         fmax=distEn[ien];
@@ -710,9 +727,11 @@ void Em5RunAction::EndOfRunAction(const G4Run* aRun)
   
   if (G4VVisManager::GetConcreteInstance())
     G4UImanager::GetUIpointer()->ApplyCommand("/vis/viewer/update");
-    
+
+#ifndef G4NOHIST    
    // Write histogram file
    hbookManager->write();
+#endif
    
   // save Rndm status
   if (saveRndm == 1)
@@ -776,7 +795,7 @@ void Em5RunAction::FillNbOfSteps(G4double ns)
   G4double n,bin ;
   G4int ibin;
  
-  if(histo1)
+  if(nbinStep>0)
   {
     entryStep += 1. ;
  
@@ -791,7 +810,9 @@ void Em5RunAction::FillNbOfSteps(G4double ns)
       ibin= bin ;
       distStep[ibin] += 1. ;
     }
-   histo1->accumulate(ns) ;
+#ifndef G4NOHIST    
+   histo1->accumulate(ns);
+#endif   
   }
 }
 
@@ -802,7 +823,7 @@ void Em5RunAction::FillEn(G4double En)
   G4double bin ;
   G4int ibin;
 
-  if(histo2)
+  if(nbinEn>0)
   {
     entryEn += 1. ;
  
@@ -816,7 +837,9 @@ void Em5RunAction::FillEn(G4double En)
       ibin= bin ;
       distEn[ibin] += 1. ;
     }
-  histo2->accumulate(En/MeV) ;
+#ifndef G4NOHIST    
+  histo2->accumulate(En/MeV);
+#endif  
   }
 }
 
@@ -827,7 +850,7 @@ void Em5RunAction::FillTt(G4double En)
   G4double bin ;
   G4int ibin;
 
-  if(histo5)
+  if(nbinTt>0)
   {
     entryTt += 1. ;
     Ttmean += En ;
@@ -843,7 +866,9 @@ void Em5RunAction::FillTt(G4double En)
       ibin= bin ;
       distTt[ibin] += 1. ;
     }
-  histo5->accumulate(En/MeV) ;
+#ifndef G4NOHIST    
+  histo5->accumulate(En/MeV);
+#endif  
   }
 }
 
@@ -854,7 +879,7 @@ void Em5RunAction::FillTb(G4double En)
   G4double bin ;
   G4int ibin;
   
-  if(histo7)
+  if(nbinTb>0)
   {
     entryTb += 1. ;
     Tbmean += En ;
@@ -870,7 +895,9 @@ void Em5RunAction::FillTb(G4double En)
       ibin= bin ;
       distTb[ibin] += 1. ;
     }
+#ifndef G4NOHIST    
   histo7->accumulate(En/MeV) ;
+#endif  
   }
 }
 
@@ -881,7 +908,7 @@ void Em5RunAction::FillTsec(G4double En)
   G4double bin ;
   G4int ibin;
 
-  if(histo8)
+  if(nbinTsec>0)
   {
     entryTsec += 1. ;
 
@@ -895,7 +922,9 @@ void Em5RunAction::FillTsec(G4double En)
       ibin= bin ;
       distTsec[ibin] += 1. ;
     }
+#ifndef G4NOHIST    
   histo8->accumulate(En/MeV) ;
+#endif  
   }
 }
 
@@ -906,7 +935,7 @@ void Em5RunAction::FillGammaSpectrum(G4double En)
   G4double bin ;
   G4int ibin;
 
-  if(histo10)
+  if(nbinGamma>0)
   {
     entryGamma += 1. ;
 
@@ -920,7 +949,9 @@ void Em5RunAction::FillGammaSpectrum(G4double En)
       ibin= bin ;
       distGamma[ibin] += 1. ;
     }
+#ifndef G4NOHIST    
   histo10->accumulate(log10(En/MeV)) ;
+#endif  
   }
 }
 
@@ -934,7 +965,7 @@ void Em5RunAction::FillTh(G4double Th)
   G4double bin,Thbin ,wg;
   G4int ibin;
 
-  if(histo3)
+  if(nbinTh>0)
   {
     entryTh += 1. ;
 
@@ -960,8 +991,9 @@ void Em5RunAction::FillTh(G4double Th)
       }
       distTh[ibin] += wg  ;
     }
-
+#ifndef G4NOHIST
   histo3->accumulate(Th/deg, wg) ;
+#endif  
   }
 }
 
@@ -975,7 +1007,7 @@ void Em5RunAction::FillThBack(G4double Th)
   G4double bin,Thbin,wg ;
   G4int ibin;
 
-  if(histo6)
+  if(nbinThback>0)
   {
     entryThback += 1. ;
 
@@ -999,7 +1031,9 @@ void Em5RunAction::FillThBack(G4double Th)
       }
       distThback[ibin] += wg  ;
     }
+#ifndef G4NOHIST
   histo6->accumulate(Th/deg, wg) ;
+#endif  
   }
 
 }
@@ -1011,7 +1045,7 @@ void Em5RunAction::FillR(G4double R )
   G4double bin ;
   G4int ibin;
 
-  if(histo4)
+  if(nbinR>0)
   {
     entryR  += 1. ;
     Rmean += R ;
@@ -1027,7 +1061,9 @@ void Em5RunAction::FillR(G4double R )
       ibin= bin ;
       distR[ibin] += 1. ;
     }
+#ifndef G4NOHIST    
   histo4->accumulate(R/mm) ;
+#endif  
   }
 }
 
@@ -1038,7 +1074,7 @@ void Em5RunAction::Fillvertexz(G4double z )
   G4double bin ;
   G4int ibin;
   
-  if(histo9)
+  if(nbinvertexz>0)
   {
     entryvertexz  += 1. ;
 
@@ -1052,7 +1088,9 @@ void Em5RunAction::Fillvertexz(G4double z )
       ibin= bin ;
       distvertexz[ibin] += 1. ;
     }
+#ifndef G4NOHIST    
   histo9->accumulate(z/mm) ;
+#endif  
   }
 }
 
